kubernetes/homelab-k8s-001/apps/network/external-services/minio.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio
  namespace: network
subsets:
  - addresses:
    - ip: ${QNAP_ADDR}
    ports:
    - name: http
      port: 39010
    - name: minio
      port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: network
spec:
 ports:
   - name: http
     port: 39010
     protocol: TCP
     targetPort: 39010
   - name: minio
     port: 9000
     protocol: TCP
     targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "simple-icons:minio"

    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
  labels:
    app.kubernetes.io/instance: minio
    app.kubernetes.io/name: minio
  name: minio
  namespace: network
spec:
  ingressClassName: internal
  rules:
  - host: minio.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: minio
            port:
              number: 39010
        path: /
        pathType: Prefix
