kubernetes/homelab-k8s-001/apps/network/external-services/unifi.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
  namespace: network
subsets:
  - addresses:
    - ip: 192.168.30.1
    ports:
    - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: network
spec:
 ports:
   - name: http
     port: 443
     protocol: TCP
     targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    hajimari.io/enable: "true"
    hajimari.io/icon: "simple-icons:ubiquiti"
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
  labels:
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/name: unifi
  name: unifi
  namespace: network
spec:
  ingressClassName: internal
  rules:
  - host: unifi.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: unifi
            port:
              number: 443
        path: /
        pathType: Prefix
